--- a/colaboraciones.html
+++ b/colaboraciones.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Colaboraciones</title>
-    <link rel="stylesheet" href="estiloc.css">
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     
@@ -47,5 +47,7 @@
             </ul>
         </li>
     </ul>
+    <h3>Documento con las funciones de los centros de trabajos </h3>
+        <iframe src="archivo.pdf"></iframe>  
 </body>
 </html>
