--- a/colaboraciones.html
+++ b/colaboraciones.html
@@ -19,33 +19,35 @@
         </ul>
         </nav>
         </header>
-<h1>Requisitos para ser un centro de trabajo</h1>
         <H1>Requisitos para ser un centro de trabajo</H1>
     </header>
+    <section>
+        <ul class="requisitos">
+            <li><strong>Datos de la empresa:</strong>
+                <ul>
+                    <li>Nombre o razón social y domicilio completo</li>
+                    <li>NIF y número de la Seguridad Social, e indicar si es de nueva creación o ya existente</li>
+                    <li>Actividad económica principal</li>
+                    <li>Su mutua aseguradora de enfermedad común y accidentes profesionales</li>
+                </ul>
+            </li>
+            <li><strong>Datos del centro de trabajo:</strong>
+                <ul>
+                    <li>Nombre y domicilio completo</li>
+                    <li>Número de inscripción, motivo de presentación, clase de centro y fecha de iniciación</li>
+                    <li>Actividad económica principal y superficie construida en metros cuadrados</li>
+                    <li>Plantilla del centro de trabajo</li>
+                </ul>
+            </li>
+            <li><strong>Datos de producción del centro de trabajo:</strong>
+                <ul>
+                    <li>Potencia instalada</li>
+                    <li>Especificación de la maquinaria y aparatos instalados</li>
+                    <li>Si produce o almacenan sustancias peligrosas de las incluidas en el RD 2216/1985</li>
+                </ul>
+            </li>
+        </ul>
+    </section>
     <ul class="requisitos">
-        <li><strong>Datos de la empresa:</strong>
-            <ul>
-                <li>Nombre o razón social y domicilio completo</li>
-                <li>NIF y número de la Seguridad Social, e indicar si es de nueva creación o ya existente</li>
-                <li>Actividad económica principal</li>
-                <li>Su mutua aseguradora de enfermedad común y accidentes profesionales</li>
-            </ul>
-        </li>
-        <li><strong>Datos del centro de trabajo:</strong>
-            <ul>
-                <li>Nombre y domicilio completo</li>
-                <li>Número de inscripción, motivo de presentación, clase de centro y fecha de iniciación</li>
-                <li>Actividad económica principal y superficie construida en metros cuadrados</li>
-                <li>Plantilla del centro de trabajo</li>
-            </ul>
-        </li>
-        <li><strong>Datos de producción del centro de trabajo:</strong>
-            <ul>
-                <li>Potencia instalada</li>
-                <li>Especificación de la maquinaria y aparatos instalados</li>
-                <li>Si produce o almacenan sustancias peligrosas de las incluidas en el RD 2216/1985</li>
-            </ul>
-        </li>
-    </ul>
 </body>
 </html>
