Se diseño la pagina colaboraciones

--- a/colaboraciones.html
+++ b/colaboraciones.html
@@ -16,14 +16,17 @@
             <li><a href="inicio.html">Inicio</a></li>
             <li><a href="pasantia.html">Pasantia</a></li>
             <li><a href="colaboraciones.html">Colaboraciones</a></li>
+            <li><a href="familia.html">Familia</a></li>
         </ul>
         </nav>
         </header>
-        <H1>Requisitos para ser un centro de trabajo</H1>
     </header>
-    <section>
+    <section class="colaboraciones">
+
+        <H1>Requisitos para ser un centro de trabajo</H1>
+        <br>
         <ul class="requisitos">
-            <li><strong>Datos de la empresa:</strong>
+            <strong>Datos de la empresa:</strong>
                 <ul>
                     <li>Nombre o razón social y domicilio completo</li>
                     <li>NIF y número de la Seguridad Social, e indicar si es de nueva creación o ya existente</li>
@@ -31,7 +34,8 @@
                     <li>Su mutua aseguradora de enfermedad común y accidentes profesionales</li>
                 </ul>
             </li>
-            <li><strong>Datos del centro de trabajo:</strong>
+            <br>
+            <strong>Datos del centro de trabajo:</strong>
                 <ul>
                     <li>Nombre y domicilio completo</li>
                     <li>Número de inscripción, motivo de presentación, clase de centro y fecha de iniciación</li>
@@ -39,7 +43,8 @@
                     <li>Plantilla del centro de trabajo</li>
                 </ul>
             </li>
-            <li><strong>Datos de producción del centro de trabajo:</strong>
+            <br>
+            <strong>Datos de producción del centro de trabajo:</strong>
                 <ul>
                     <li>Potencia instalada</li>
                     <li>Especificación de la maquinaria y aparatos instalados</li>
@@ -48,6 +53,8 @@
             </li>
         </ul>
     </section>
-    <ul class="requisitos">
+    <section>
+        <iframe src="" frameborder="0"></iframe>
+    </section>
 </body>
 </html>
