--- a/colaboraciones.html
+++ b/colaboraciones.html
@@ -54,7 +54,7 @@
         </ul>
     </section>
     <section>
-        <iframe src="" frameborder="0"></iframe>
+        <iframe src="https://drive.google.com/file/d/13A6KbCd9Cr5lAVdhzSFAK1yaRLiob0gV/preview" width="840" height="1080" allow="autoplay"></iframe>
     </section>
 </body>
 </html>
